2020-08-09  Charlie Zender  <zender@uci.edu>

	* nco_rgr_wgt() clarify HINT when spatial dimension hard to find

2020-08-07  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.4-alpha11 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.4-alpha11: Euphoria';git push
	git tag -a 4.9.4-alpha11 -m '';git push --tags

	* ncclimo add mpi mode to hfc for fl_nbr == 1

	* Deprecate unreleased splitter code for sub-averages and (time,tpd,space) shapes

	* nco_rgr_wgt() add 5.0e-15 tolerance to area checks, check only 2D grids

2020-08-06  Charlie Zender  <zender@uci.edu>

	* ncclimo tpd_out inferral valid for any time-coordinate named "time" (EAM and ELM, not yet MPAS)

	* NCO 4.9.4-alpha10 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.4-alpha10: Splashdown';git push
	git tag -a 4.9.4-alpha10 -m 'autoconf enable-gpu, enable-optimize; ncks dt_fmt json/xml; ncclimo ia mlt fl hfc, sdd dfl, nfr tpd, no_amwg;';git push --tags

	* ncclimo remove extraneous 's' (typo/command) from MPI section

	* ncclimo infer tdp_out from first file if not user-specified with hfc or hfs

2020-08-05  Charlie Zender  <zender@uci.edu>

	* ncclimo fix yyyy_clm_end string in December for scd, sdd modes

	* ncclimo kill remaining children after bad interleave before exiting parent

	* ncclimo kill remaining children after bad cull before exiting parent

	* Add exit() hints for many NC_EDAP* errors from remote DAP servers

	* Parallelize diurnal climo generation from multiple input files

	* Turn-off AMWG links by default (enable old behavior with --amwg_links)

	* Default December mode is sdd (enable old behavior with --dec_md=scd)

2020-08-04  Charlie Zender  <zender@uci.edu>

	* Generalize order of specification of --dt_fmt and --cal, tidy code

2020-08-04 Henry Butowsky  <henryb@hush.com>

	* Expand usage of ncks --dt_fmt switch to JSON (--json) and XML (--xml) output

2020-08-03  Charlie Zender  <zender@uci.edu>

	* ncclimo use ISO8601 time format to eliminate whitespace and quotes
